[package]
name = "hebrew_unicode_script"
version = "0.5.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"
authors = ["Roest Dev <github.ebook242@passinbox.com>"]
description = "A lightweight library to check if a hebrew character belongs to certain collections"
documentation = "https://docs.rs/crate/hebrew_unicode_script/"
repository = "https://github.com/Roestdev/hebrew_unicode_script/"
keywords = ["hebrew", "unicode-characters", "unicode-text", "utf-8", "no-std"]
categories = ["text-processing"]
readme = "README.md"
rust-version = "1.56.1"


  