[package]
name = "hebrew_unicode_script"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Roest Dev <github.ebook242@passinbox.com>"]
description = "A low-level library designed to ascertain whether a character belongs to the Hebrew Unicode script. It supports checks for individual characters as well as for membership within collections"
documentation = "https://docs.rs/crate/hebrew_unicode_script/"
repository = "https://github.com/Roestdev/hebrew_unicode_script/"
keywords = ["hebrew", "unicode-characters", "unicode-text", "utf-8", "no-std"]
categories = ["text-processing"]
readme = "README.md"
rust-version = "1.56.1"


  